--- a/client/src/component/SignUp/style.scss
+++ b/client/src/component/SignUp/style.scss
@@ -69,7 +69,11 @@
     color: rgba(255,255,255,1);
   }
   .heading--primary {font-size: 1.999rem;}
-  .heading--secondary {font-size: 1.414rem;}
+  .heading--secondary {
+    color: white;
+    font-size: 1.414rem;
+    margin-top: 10px;
+  }
   .thumbnail__links {
     align-self: flex-end;
     width: 100%;
@@ -87,7 +91,7 @@
   label {
     font-size: .85rem;
     text-transform: uppercase;
-    color: #ccc;
+    color: #3f3d3d;
   }
   .form-control {
     background-color: transparent;
@@ -135,7 +139,7 @@
   label {
     font-size: .85rem;
     text-transform: uppercase;
-    color: #ccc;
+    color: #3f3d3d;
 }
 
 .form-control {
