--- a/client/src/component/Header/style.scss
+++ b/client/src/component/Header/style.scss
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     padding-top: 20px;
+    position: fixed;
+    width: 100%;
 }
 .title-part {
     align-items: center;
@@ -26,6 +28,11 @@
 }
 .header-container {
     display: flex;
+
+    &.is-scrolled {
+        background-color: white;
+        transition: all 0.2s ease-in-out;
+    }
 
 }
 .header-list-part {
