--- a/client/src/component/LandingPage/style.scss
+++ b/client/src/component/LandingPage/style.scss
@@ -2,7 +2,7 @@
     background-image: url("http://joshi24.myweb.cs.uwindsor.ca/static-img/home-page.jpg");
     width: 100%;
     height: 100vh;
-    position: fixed;
+    position: absolute;
     background-size: 100%;
     background-repeat: no-repeat;
     top: 0;
