--- a/client/src/component/matches/style.scss
+++ b/client/src/component/matches/style.scss
@@ -1,7 +1,7 @@
 .each-match {
     display: flex;
     justify-content: space-around;
-    height: 100px;
+    height: 325px;
     align-items: center;
     border-radius: 6px;
     box-shadow: 0 2px 6px 0 rgba(0,0,0,.1);
@@ -12,4 +12,9 @@
         -webkit-transform: translateY(-2px);
         transform: translateY(-2px);
       }
+}
+
+
+.captains-profile {
+  display: flex;
 }
