--- a/client/src/component/teams/style.scss
+++ b/client/src/component/teams/style.scss
@@ -177,6 +177,25 @@
   background: linear-gradient(134deg, #fdb913, #f85c00);
   position: relative;
 
+  &.is-vice-cap {
+    &::before {
+      content: "VC";
+      font-weight: bold;
+      top: 10px;
+      left: 10px;
+      width: 25px;
+      height: 25px;
+      color: black;
+      border-radius: 50%;
+      display: flex;
+      text-align: center;
+      align-items: center;
+      justify-content: center;
+      position: absolute;
+      background-color: white;
+    }
+  }
+
   &.is-captain {
     &::before {
       content: "C";
