--- a/client/src/component/LandingPage/style.scss
+++ b/client/src/component/LandingPage/style.scss
@@ -9,16 +9,17 @@
     z-index: -1;
     .intro-main {
         height: 100%;
-        padding-top: 12rem;
+        padding-top: 2rem;
         opacity: 0.8;
+        margin: 0 auto;
         font-size: 1.75rem;
         font-weight: bold;
         color: white;
-        max-width: 50%;
+        max-width: 70%;
         text-align: center;
         padding-left: 4rem;
         font-family: 'Dancing Script', cursive;
-        text-align: left;
+        // text-align: left;
         .title2 {
             padding-top: 1rem;
         }
