--- a/client/src/component/AboutUs/style.scss
+++ b/client/src/component/AboutUs/style.scss
@@ -11,6 +11,7 @@
         font-weight: bold;
         font-size: 2.5rem;
         margin-top: 3rem;
+        margin-left: 20px;
     }
     .wrap-team-members {
         display: flex;
